2007-01-30  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h,
	  bin/rdoc-osa,
	  sample/misc/sdef.rb,
	  tests/tc_itunes.rb,
	  tests/tc_ichat.rb,
	  tests/tc_textedit.rb,
	  tests/tc_get_app.rb,
	  TODO:
	- Added support for merging additional sdef to an existing application object
	  by using the #merge method ;
	- API change: OSA.app() now accept an inline Hash syntax with :by_name, 
	  :by_path, :by_bundle_id and :by_signature keys/values. The old 
	  OSA.app_with_* methods have been deprecated ;
	- Updated samples and test cases to the new API.

2007-01-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_ichat.rb,
	  src/lib/rbosa.rb,
	  bin/rdoc-osa:
	- Fixed properties returning 'list_of_*' types (and added some tests cases) ;
	- Small RDoc fixes.

	* tests/tc_textedit.rb,
	  src/lib/rbosa.rb,
	  TODO:
	Added the possibility to specify optional arguments using an inline-Hash
	syntax (the old way is also still possible).

	* tests/tc_textedit.rb,
	  tests/as.rb,
	  tests/tc_get_app.rb,
	  src/lib/rbosa.rb,
	  TODO:
	Get rid of costly evalulations. Added more test cases.

2007-01-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_textedit.rb,
	  src/lib/rbosa.rb,
	  src/rbosa.c,
	  TODO:
	Added support for some 'location reference' types (before/after a given 
	descriptor). Added some test cases.

	* COPYRIGHT,
	  */**/*.{rb,c,h}:
	Updated copyright marks.

2007-01-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa_err.c,
	  src/rbosa.c,
	  src/rbosa.h:
	Better application-level error handling. Now converting the error numbers to
	human-readable sentences. 

	* tests/tc_textedit.rb,
	  src/lib/rbosa_properties.rb,
	  src/lib/rbosa.rb:
	Added translation support for property codes. Now translating themi when 
	converting when converting records from OSA to Ruby (as a Hash object). Added
	a text case.

	* src/lib/rbosa.rb:
	- Added OSA -> Ruby 'TIFF' conversion ;