@@ -200,9 +200,36 @@ class OSA::ObjectSpecifierList
 end
 
 module OSA::EventDispatcher
+
+    SCRIPTING_ADDITIONS_DIR = [
+        '/System/Library/ScriptingAdditions',
+        '/Library/ScriptingAdditions'
+    ]
+    if home = ENV['HOME']
+        SCRIPTING_ADDITIONS_DIR << File.join(home, '/Library/ScriptingAdditions')
+    end
+
     def merge(args)
         args = { :by_name => args } if args.is_a?(String)
-        name, signature, sdef = OSA.__scripting_info__(args)
+        by_name = args[:by_name]
+        begin
+            name, signature, sdef = OSA.__scripting_info__(args)
+        rescue RuntimeError => e
+            # If an sdef bundle can't be find by name, let's be clever and look in the ScriptingAdditions locations.
+            if by_name 
+                args = SCRIPTING_ADDITIONS_DIR.each do |dir|
+                    path = ['.app', '.osax'].map { |e| File.join(dir, by_name + e) }.find { |p| File.exists?(p) }
+                    if path
+                        break args = { :by_path => path }
+                    end
+                end 
+                if args
+                    by_name = nil
+                    retry
+                end
+            end
+            raise e
+        end
         app_module_name = self.class.name.scan(/^OSA::(.+)::.+$/).flatten.first
         app_module = OSA.const_get(app_module_name) 
         OSA.__load_sdef__(sdef, signature, app_module, true, self.class)
